add duration_seconds & transfer_rate_mbits fields to request status
