# docs/swagger.json
@@ -191,6 +191,10 @@
                             "type": "string",
                             "example": "37.921µs"
                         },
+                        "duration_seconds": {
+                            "type": "number",
+                            "example": 0.021
+                        },
                         "file": {
                             "type": "string",
                             "example": "/path/to/file.txt"
@@ -204,8 +208,13 @@
                             "example": 1000
                         },
                         "transfer_rate": {
+                            "description": "human friendly",
                             "type": "string",
                             "example": "1000B/s"
+                        },
+                        "transfer_rate_mbits": {
+                            "type": "number",
+                            "example": 0.001
                         },
                         "upload_parts": {
                             "type": "integer",
@@ -261,8 +270,13 @@
                     "example": 1
                 },
                 "duration": {
+                    "description": "human friendly",
                     "type": "string",
                     "example": "21.916462ms"
+                },
+                "duration_seconds": {
+                    "type": "number",
+                    "example": 0.021
                 },
                 "file": {
                     "type": "string",
@@ -277,8 +291,13 @@
                     "example": 1000
                 },
                 "transfer_rate": {
+                    "description": "human friendly",
                     "type": "string",
                     "example": "1000B/s"
+                },
+                "transfer_rate_mbits": {
+                    "type": "number",
+                    "example": 0.001
                 },
                 "upload_parts": {
                     "type": "integer",
